apps/cloudflared/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cloudflared
  labels:
    app.kubernetes.io/name: cloudflared
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  serviceName: cloudflared
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloudflared
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      volumes:
        - configMap:
            name: cloudflared-local-config
          name: config-file
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:2026.10.0@sha256:9b49eed8f62806d5d45ddf59ecefb5710429598ea6d3fcccd2af938f621b2b07
        command:
        - cloudflared
        - tunnel
        # In a k8s environment, the metrics server needs to listen outside the pod it runs on. 
        # The address 0.0.0.0:2000 allows any pod in the namespace.
        - --metrics
        - 0.0.0.0:2000
        # - --loglevel
        # - debug
        - run
        ports:
        - containerPort: 2000
          name: metrics
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        startupProbe:
          httpGet:
          # Cloudflared has a /ready endpoint which returns 200 if and only if
          # it has an active connection to the edge.
            path: /ready
            port: 2000
          initialDelaySeconds: 3
          periodSeconds: 2
        livenessProbe:
          httpGet:
            # See https://github.com/cloudflare/cloudflared/blob/2feccd772c7bfe37e43531cf7524deb30190de8b/metrics/metrics.go#L75C21-L75C33
            # Static return fmt.Fprintf(w, "OK\n")
            path: /healthcheck
            port: 2000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
        volumeMounts:
        - name: config-file
          mountPath: /etc/cloudflared/
  updateStrategy:
    type: RollingUpdate
